# CustomLibrary

./: .gitignore  CMakeLists.txt  Lists.sln  README.md
.github/workflows/: DataStructures_Tests.yml  main.yml
Algorithms/: CMakeLists.txt
Algorithms/Algorithms/: Algorithms.vcxproj
Algorithms/include/: HeapOperations.hpp  NonModifyingSequenceOperations.hpp  SortingOperations.hpp
DataStructures/: CMakeLists.txt  DataStructures.vcxproj  DataStructures.vcxproj.filters
DataStructures/Source/: main.cpp
DataStructures/include/: Array.hpp  DeQue.h  DeQue.hpp  FList.hpp  FListNode.hpp  List.hpp  ListNode.hpp  PriorityQueue.hpp  Queue.h  Queue.hpp  Span.hpp  Stack.hpp  UnorderedMap.hpp  Vector.hpp
Lists/: Lists.vcxproj  Lists.vcxproj.filters  SList.cpp  SList.h  SListNode.cpp  SListNode.h  main.cpp
Lists/Source/: main.cpp
Lists/include/: DList.hpp  DListNode.hpp  FList.hpp  FListNode.hpp  List.hpp  SList.hpp  SListNode.hpp
Lists/x64/Debug/: Lists.exe.recipe  Lists.ilk  vc143.idb
Lists/x64/Debug/Lists.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lists.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Maths/: CMakeLists.txt
Maths/MathLibrary/: MathLibrary.vcxproj
Maths/include/: MathematicalConstants.hpp
TST_DataStructures/: CMakeLists.txt  DequeTest.hpp  HelperFuncs.hpp  TST_DataStructures.vcxproj  TST_DataStructures.vcxproj.filters  test.cpp
TST_DataStructures/ContainerTests/: ArrayTest.hpp  DequeTest.hpp  FListTest.hpp  ListTest.hpp  PriorityQueueTest.hpp  QueueTest.hpp  SpanTest.hpp  StackTest.hpp  VectorTest.hpp
TST_DataStructures/NMSequenceOperationsTests/: FindTest.hpp
TST_DataStructures/SortingOperationsTests/: HeapTest.hpp  SortTest.hpp
